LCL, Test: Add DpiScaling test (scale after load from file)

--- a/lcl/testcase/test_lcl.lpi
+++ b/lcl/testcase/test_lcl.lpi
@@ -80,6 +80,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Test_ChildSizing"/>
       </Unit>
+      <Unit>
+        <Filename Value="test_dpiscaling.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Test_DpiScaling"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
