--- a/components/lazedit/Makefile.fpc
+++ b/components/lazedit/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for LazEdit 1.0
 #
-#   This file was generated on 06/04/2025
+#   This file was generated on 7-7-25
 
 [package]
 name=lazedit
@@ -11,7 +11,7 @@ version=1.0
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
 unitdir=. ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)
-options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -vm6058,3123 $(DBG_OPTIONS)
 
 [target]
 units=lazedit.pas
