--- a/components/synedit/Makefile.compiled
+++ b/components/synedit/Makefile.compiled
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <Makefile Value="2"/>
-  <Params Value="-Fu.;../../packager/units/$(CPU_TARGET)-$(OS_TARGET);../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET);../freetype/lib/$(CPU_TARGET)-$(OS_TARGET);../lazedit/lib/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) -MObjFPC -Scghi -CR -O1 -g -gl -l -vewnhibq -vm6058,5024,4055 -dLCL -dLCL$(LCL_PLATFORM) -CR -dgc allsynedit.pas"/>
+  <Params Value="-Fu.;../../packager/units/$(CPU_TARGET)-$(OS_TARGET);../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET);../freetype/lib/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET);../lazedit/lib/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) -MObjFPC -Scghi -CR -O1 -g -gl -l -vewnhibq -vm6058,5091,5024,4055,3124,3123 -dLCL -dLCL$(LCL_PLATFORM) -CR -dgc -vm6060 allsynedit.pas"/>
 </CONFIG>
