--- a/components/fpdebug/Makefile.fpc
+++ b/components/fpdebug/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for fpdebug 1.0
 #
-#   This file was generated on 14-8-23
+#   This file was generated on 10-7-25
 
 [package]
 name=fpdebug
@@ -11,7 +11,7 @@ version=1.0
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
 unitdir=. ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazdebuggers/lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../debuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)
-options=-MObjFPC -Scghi -O1 -g -gl -l -venibq -vw-h- -vm6058,3057 $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -venibq -vw-h- $(DBG_OPTIONS)
 
 [target]
 units=fpdebug.pas
