--- a/components/lazdebuggers/lazdebuggerfp/Makefile.fpc
+++ b/components/lazdebuggers/lazdebuggerfp/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for LazDebuggerFp 1.0
 #
-#   This file was generated on 3-9-23
+#   This file was generated on 10-7-25
 
 [package]
 name=lazdebuggerfp
@@ -11,7 +11,7 @@ version=1.0
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)
 unitdir=. ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET) ../../buildintf/units/$(CPU_TARGET)-$(OS_TARGET) ../../debuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../../freetype/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) ../../fpdebug/lib/$(CPU_TARGET)-$(OS_TARGET) ../../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../lazcontrols/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../../ideintf/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) ../cmdlinedebuggerbase/lib/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)
-options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -vm6058,3123 -dLCL -dLCL$(LCL_PLATFORM) $(DBG_OPTIONS)
+options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -dLCL -dLCL$(LCL_PLATFORM) $(DBG_OPTIONS)
 
 [target]
 units=lazdebuggerfp.pas
