--- a/components/lazedit/Makefile.compiled
+++ b/components/lazedit/Makefile.compiled
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <Makefile Value="2"/>
-  <Params Value="-Fu.;../../packager/units/$(CPU_TARGET)-$(OS_TARGET);../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET);../freetype/lib/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) -MObjFPC -Scghi -O1 -g -gl -l -vewnhibq -vm6058,3123 lazedit.pas"/>
+  <Params Value="-Fu.;../../packager/units/$(CPU_TARGET)-$(OS_TARGET);../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET);../freetype/lib/$(CPU_TARGET)-$(OS_TARGET);../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) -MObjFPC -Scghi -O1 -g -gl -l -vewnhibq lazedit.pas"/>
 </CONFIG>
