--- a/components/leakview/test/TestLeakView.lpi
+++ b/components/leakview/test/TestLeakView.lpi
@@ -8,7 +8,6 @@
       <Title Value="TestLeakView"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
     </General>
     <BuildModes>
       <Item Name="Default" Default="True"/>
@@ -19,24 +18,23 @@
     </PublishOptions>
     <RunParams>
       <FormatVersion Value="2"/>
-      <Modes Count="0"/>
     </RunParams>
-    <RequiredPackages Count="5">
-      <Item1>
+    <RequiredPackages>
+      <Item>
         <PackageName Value="simpleideintf"/>
-      </Item1>
-      <Item2>
+      </Item>
+      <Item>
         <PackageName Value="leakview"/>
-      </Item2>
-      <Item3>
+      </Item>
+      <Item>
         <PackageName Value="fpcunittestrunner"/>
-      </Item3>
-      <Item4>
+      </Item>
+      <Item>
         <PackageName Value="LCL"/>
-      </Item4>
-      <Item5>
+      </Item>
+      <Item>
         <PackageName Value="FCL"/>
-      </Item5>
+      </Item>
     </RequiredPackages>
     <Units>
       <Unit>
@@ -61,21 +59,26 @@
       <OtherUnitFiles Value="..\leakview\test"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
+    </Linking>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="4">
-      <Item1>
+    <Exceptions>
+      <Item>
         <Name Value="EAbort"/>
-      </Item1>
-      <Item2>
+      </Item>
+      <Item>
         <Name Value="ECodetoolError"/>
-      </Item2>
-      <Item3>
+      </Item>
+      <Item>
         <Name Value="EFOpenError"/>
-      </Item3>
-      <Item4>
+      </Item>
+      <Item>
         <Name Value="EAssertionFailedError"/>
-      </Item4>
+      </Item>
     </Exceptions>
   </Debugging>
 </CONFIG>
