--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -121,6 +121,8 @@
       <Directives> 1 </Directives>
       <Constants> 1 </Constants>
       <Types> 1 </Types>
+      <HexadecimalNumbers>3</HexadecimalNumbers>
+      <FloatingPointNumbers>3</FloatingPointNumbers>;
   </Capitalisation>
   <SpecificWordCaps>
       <Enabled> True </Enabled>
