Examples/translation: Fix demo not detecting full language identifiers such as zh_CN.

--- a/examples/translation/translation_demo.lpi
+++ b/examples/translation/translation_demo.lpi
@@ -121,13 +121,9 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseHeaptrc Value="True"/>
       </Debugging>
-      <Options>
-        <Win32>
-          <GraphicApplication Value="True"/>
-        </Win32>
-      </Options>
     </Linking>
   </CompilerOptions>
   <Debugging>
