Jedi code format: Split option spaces for assing in spaces before and after. Add i18n.

--- a/components/jcf2/CommandLine/Lazarus/jcfsettings.cfg
+++ b/components/jcf2/CommandLine/Lazarus/jcfsettings.cfg
@@ -62,6 +62,8 @@
       <MaxSpacesInCode> 2 </MaxSpacesInCode>
       <UseMaxSpacesInCode> True </UseMaxSpacesInCode>
       <SpaceForOperator> 0 </SpaceForOperator>
+      <SpaceBeforeAssign> 0 </SpaceBeforeAssign>
+      <SpaceAfterAssign> 0 </SpaceAfterAssign>
       <SpaceBeforeOpenBracketsInFunctionDeclaration> False </SpaceBeforeOpenBracketsInFunctionDeclaration>
       <SpaceBeforeOpenBracketsInFunctionCall> False </SpaceBeforeOpenBracketsInFunctionCall>
       <SpaceBeforeOpenSquareBracketsInExpression> False </SpaceBeforeOpenSquareBracketsInExpression>
