--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -62,6 +62,8 @@
       <MaxSpacesInCode> 2 </MaxSpacesInCode>
       <UseMaxSpacesInCode> True </UseMaxSpacesInCode>
       <SpaceForOperator> 0 </SpaceForOperator>
+      <SpaceBeforeAssign> 0 </SpaceBeforeAssign>
+      <SpaceAfterAssign> 0 </SpaceAfterAssign>
       <SpaceBeforeOpenBracketsInFunctionDeclaration> False </SpaceBeforeOpenBracketsInFunctionDeclaration>
       <SpaceBeforeOpenBracketsInFunctionCall> False </SpaceBeforeOpenBracketsInFunctionCall>
       <SpaceBeforeOpenSquareBracketsInExpression> False </SpaceBeforeOpenSquareBracketsInExpression>
