--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -42,6 +42,7 @@
       <IndentLabels> 0 </IndentLabels>
       <IndentEndTryBlockAsCode> False </IndentEndTryBlockAsCode>
       <IndentExtraOrphanTryBlocks> False </IndentExtraOrphanTryBlocks>
+      <IndentBeginEndBlocks> False </IndentBeginEndBlocks>
   </Indent>
   <Spaces>
       <TabsToSpaces> True </TabsToSpaces>
