--- a/components/jcf2/TestApplication/JCFSettings.cfg
+++ b/components/jcf2/TestApplication/JCFSettings.cfg
@@ -65,6 +65,12 @@
       <SpaceForOperator> 0 </SpaceForOperator>
       <SpaceBeforeAssign> 0 </SpaceBeforeAssign>
       <SpaceAfterAssign> 0 </SpaceAfterAssign>
+      <SpaceBeforeComma> 2 </SpaceBeforeComma>
+      <SpaceAfterComma> 0 </SpaceAfterComma>
+      <SpaceBeforeColon> 0 </SpaceBeforeColon>
+      <SpaceAfterColon> 0 </SpaceAfterColon>
+      <SpaceBeforeSemicolon> 2 </SpaceBeforeSemicolon>
+      <SpaceAfterSemicolon> 0 </SpaceAfterSemicolon>
       <SpaceBeforeOpenBracketsInFunctionDeclaration> False </SpaceBeforeOpenBracketsInFunctionDeclaration>
       <SpaceBeforeOpenBracketsInFunctionCall> False </SpaceBeforeOpenBracketsInFunctionCall>
       <SpaceBeforeOpenSquareBracketsInExpression> False </SpaceBeforeOpenSquareBracketsInExpression>
