--- a/components/synedit/test/SynTest.lpi
+++ b/components/synedit/test/SynTest.lpi
@@ -593,25 +593,25 @@
         </CompilerOptions>
       </Item>
       <SharedMatrixOptions Count="20">
-        <Item1 ID="394047217475" Targets="SynEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota" Value="-CR"/>
-        <Item2 ID="832332610162" Targets="SynEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,No GUI" Value="-dSynCheckPaintLock -dSynClipboardExceptions -dAssertSynMemIndex -dSynAssert -dSynAssertFold"/>
-        <Item3 ID="058689630976" Targets="SynEdit" Modes="O1 - SynFoldDebug SynFoldSaveDebug" Value="-dSynFoldDebug -dSynFoldSaveDebug"/>
-        <Item4 ID="476451423372" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0,O0riota,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,O0   NO-gt1" Value="-O-"/>
-        <Item5 ID="353669118028" Targets="#project,SynEdit,LCL,LazUtils" Modes="O1,O1riota,O1 - SynFoldDebug SynFoldSaveDebug,No GUI" Value="-O-1"/>
-        <Item6 ID="705666282637" Targets="#project,SynEdit,LCL,LazUtils" Modes="O2,O2riota" Value="-O-2"/>
-        <Item7 ID="139516671950" Targets="#project,SynEdit,LCL,LazUtils" Modes="O3,O3riota" Value="-O-3"/>
-        <Item8 ID="951152446553" Targets="#project,SynEdit,LCL,LazUtils" Modes="O4,O4riota" Value="-O-4"/>
-        <Item9 ID="290834599239" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0 -gtttt &lt;nil>,O0 -gttt,O0 -gtt,O0 -gt,O0riota1  NO-gt,No GUI" Value="-Criot"/>
-        <Item10 ID="460156594764" Targets="#project,SynEdit,LCL,LazUtils" Modes="O4,O0,O0   NO-gt1,O1,O2" Value="-Cr- -Ci- -Co- -Ct-"/>
-        <Item11 ID="862413201644" Targets="#project,SynEdit,LCL,LazUtils" Value="-CR"/>
-        <Item12 ID="552061010909" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,No GUI" Value="-Sa"/>
-        <Item13 ID="297278821722" Targets="#project,SynEdit,LCL,LazUtils" Modes="O4,O0,O0   NO-gt1,O1,O2" Value="-Sa-"/>
-        <Item14 ID="901082361902" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0riota1  NO-gt,O0   NO-gt1,O4,O3,O2,O1,O1riota,O2riota,O3riota,O4riota" Value="-gt-"/>
-        <Item15 ID="362454399046" Targets="#project,SynEdit,LCL,LazUtils" Modes="O1 - SynFoldDebug SynFoldSaveDebug,O0 -gt,O0,O0riota,No GUI" Value="-gt- -gt"/>
-        <Item16 ID="710122956011" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0 -gtt" Value="-gt- -gtt"/>
-        <Item17 ID="041078026067" Targets="#project,SynEdit,LCL,LazUtils" Modes="O0 -gttt" Value="-gt- -gttt"/>
-        <Item18 ID="961200635277" Targets="#project,SynEdit,LCL,LazUtils" Value="-gt- -gtttt"/>
-        <Item19 ID="213690431896" Targets="#project,SynEdit,LCL,LazUtils" Modes="No GUI - MOCK" Type="IDEMacro" MacroName="LCLWidgetType" Value="testmock"/>
+        <Item1 ID="394047217475" Targets="SynEdit,LazEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota" Value="-CR"/>
+        <Item2 ID="832332610162" Targets="SynEdit,LazEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,No GUI" Value="-dSynCheckPaintLock -dSynClipboardExceptions -dAssertSynMemIndex -dSynAssert -dSynAssertFold"/>
+        <Item3 ID="058689630976" Targets="SynEdit,LazEdit" Modes="O1 - SynFoldDebug SynFoldSaveDebug" Value="-dSynFoldDebug -dSynFoldSaveDebug"/>
+        <Item4 ID="476451423372" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0,O0riota,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,O0   NO-gt1" Value="-O-"/>
+        <Item5 ID="353669118028" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O1,O1riota,O1 - SynFoldDebug SynFoldSaveDebug,No GUI" Value="-O-1"/>
+        <Item6 ID="705666282637" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O2,O2riota" Value="-O-2"/>
+        <Item7 ID="139516671950" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O3,O3riota" Value="-O-3"/>
+        <Item8 ID="951152446553" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O4,O4riota" Value="-O-4"/>
+        <Item9 ID="290834599239" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0 -gtttt &lt;nil>,O0 -gttt,O0 -gtt,O0 -gt,O0riota1  NO-gt,No GUI" Value="-Criot"/>
+        <Item10 ID="460156594764" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O4,O0,O0   NO-gt1,O1,O2" Value="-Cr- -Ci- -Co- -Ct-"/>
+        <Item11 ID="862413201644" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Value="-CR"/>
+        <Item12 ID="552061010909" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0riota,O1riota,O2riota,O3riota,O4riota,O1 - SynFoldDebug SynFoldSaveDebug,O0riota1  NO-gt,O0 -gt,O0 -gtt,O0 -gttt,O0 -gtttt &lt;nil>,No GUI" Value="-Sa"/>
+        <Item13 ID="297278821722" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O4,O0,O0   NO-gt1,O1,O2" Value="-Sa-"/>
+        <Item14 ID="901082361902" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0riota1  NO-gt,O0   NO-gt1,O4,O3,O2,O1,O1riota,O2riota,O3riota,O4riota" Value="-gt-"/>
+        <Item15 ID="362454399046" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O1 - SynFoldDebug SynFoldSaveDebug,O0 -gt,O0,O0riota,No GUI" Value="-gt- -gt"/>
+        <Item16 ID="710122956011" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0 -gtt" Value="-gt- -gtt"/>
+        <Item17 ID="041078026067" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="O0 -gttt" Value="-gt- -gttt"/>
+        <Item18 ID="961200635277" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Value="-gt- -gtttt"/>
+        <Item19 ID="213690431896" Targets="#project,SynEdit,LCL,LazUtils,LazEdit" Modes="No GUI - MOCK" Type="IDEMacro" MacroName="LCLWidgetType" Value="testmock"/>
         <Item20 ID="940714568938" Targets="#project" Modes="No GUI,No GUI - MOCK" Value="-dNOGUI"/>
       </SharedMatrixOptions>
     </BuildModes>
