--- a/components/customdrawn/examples/controls/cdcontrolstest.lpi
+++ b/components/customdrawn/examples/controls/cdcontrolstest.lpi
@@ -8,8 +8,12 @@
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <Title Value="cdcontrolstest"/>
+      <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
+      <XPManifest>
+        <DpiAware Value="True"/>
+      </XPManifest>
       <Icon Value="0"/>
     </General>
     <i18n>
@@ -17,6 +21,9 @@
     </i18n>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
+      <SharedMatrixOptions Count="1">
+        <Item1 ID="024367672912" Type="IDEMacro" MacroName="LCLWidgetType" Value="customdrawn"/>
+      </SharedMatrixOptions>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -32,7 +39,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="cdcontrolstest.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -40,9 +47,10 @@
       <Unit1>
         <Filename Value="mainform.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="formCDControlsTest"/>
+        <ComponentName Value="FormCDControlsTest"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="MainForm"/>
       </Unit1>
       <Unit2>
         <Filename Value="toolbartest.pas"/>
@@ -50,7 +58,16 @@
         <ComponentName Value="FormToolBar"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="ToolBarTest"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="buttontest.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FormButtons"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="ButtonTest"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -63,6 +80,9 @@
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
