--- a/components/customdrawn/examples/controls/cdcontrolstest.lpi
+++ b/components/customdrawn/examples/controls/cdcontrolstest.lpi
@@ -8,12 +8,8 @@
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <Title Value="cdcontrolstest"/>
-      <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
-      <XPManifest>
-        <DpiAware Value="True"/>
-      </XPManifest>
       <Icon Value="0"/>
     </General>
     <i18n>
@@ -21,9 +17,6 @@
     </i18n>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
-      <SharedMatrixOptions Count="1">
-        <Item1 ID="024367672912" Type="IDEMacro" MacroName="LCLWidgetType" Value="customdrawn"/>
-      </SharedMatrixOptions>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -39,7 +32,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="3">
       <Unit0>
         <Filename Value="cdcontrolstest.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -47,10 +40,9 @@
       <Unit1>
         <Filename Value="mainform.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="FormCDControlsTest"/>
+        <ComponentName Value="formCDControlsTest"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="MainForm"/>
       </Unit1>
       <Unit2>
         <Filename Value="toolbartest.pas"/>
@@ -58,16 +50,7 @@
         <ComponentName Value="FormToolBar"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="ToolBarTest"/>
       </Unit2>
-      <Unit3>
-        <Filename Value="buttontest.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="FormButtons"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Form"/>
-        <UnitName Value="ButtonTest"/>
-      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -80,9 +63,6 @@
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
-      <Debugging>
-        <DebugInfoType Value="dsDwarf3"/>
-      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
