--- a/components/markdown/demo/demogui.lpi
+++ b/components/markdown/demo/demogui.lpi
@@ -3,6 +3,11 @@
   <ProjectOptions>
     <Version Value="12"/>
     <General>
+      <Flags>
+        <SaveOnlyProjectUnits Value="True"/>
+        <SaveJumpHistory Value="False"/>
+        <SaveFoldState Value="False"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
       <Title Value="demogui"/>
       <Scaled Value="True"/>
@@ -12,6 +17,11 @@
         <DpiAware Value="True"/>
       </XPManifest>
     </General>
+    <CustomData Count="3">
+      <Item0 Name="OpenAPIBase"/>
+      <Item1 Name="OpenAPIConfig"/>
+      <Item2 Name="OpenAPIFile"/>
+    </CustomData>
     <BuildModes>
       <Item Name="Default" Default="True"/>
     </BuildModes>
