--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -1471,6 +1471,13 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
       </Unit>
+      <Unit>
+        <Filename Value="frames/editor_pascal_options.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="EditorPascalOptionsFrame"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Frame"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
