TAChart: Update some demo projects for inconsistencies in Linux

--- a/components/tachart/demo/basic/basicdemo.lpi
+++ b/components/tachart/demo/basic/basicdemo.lpi
@@ -77,6 +77,9 @@
       </SyntaxOptions>
     </Parsing>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <LinkSmart Value="True"/>
       <Options>
         <Win32>
