TAChart: Check and update 1st half of the demos under FPC 3.3.1 and Linux.

--- a/components/tachart/demo/fit/fitdemo.lpi
+++ b/components/tachart/demo/fit/fitdemo.lpi
@@ -66,6 +66,9 @@
       </Checks>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
