--- a/components/tachart/demo/html/htmldemo.lpi
+++ b/components/tachart/demo/html/htmldemo.lpi
@@ -61,6 +61,7 @@
     </SearchPaths>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <UseExternalDbgSyms Value="True"/>
       </Debugging>
       <Options>
