--- a/components/tachart/demo/listbox/listboxdemo.lpi
+++ b/components/tachart/demo/listbox/listboxdemo.lpi
@@ -61,6 +61,7 @@
     </SearchPaths>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <StripSymbols Value="True"/>
       </Debugging>
       <Options>
