--- a/components/tachart/demo/extent/extentdemo.lpi
+++ b/components/tachart/demo/extent/extentdemo.lpi
@@ -76,6 +76,9 @@
       </SyntaxOptions>
     </Parsing>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
