--- a/components/tachart/demo/imagelist/imagelistdemo.lpi
+++ b/components/tachart/demo/imagelist/imagelistdemo.lpi
@@ -63,6 +63,9 @@
       <SmartLinkUnit Value="True"/>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
+      </Debugging>
       <LinkSmart Value="True"/>
       <Options>
         <Win32>
