--- a/components/lazdebuggers/lazdebuggerintf/Makefile.fpc
+++ b/components/lazdebuggers/lazdebuggerintf/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for LazDebuggerIntf 0.0.1
 #
-#   This file was generated on 3-9-23
+#   This file was generated on 08/02/2026
 
 [package]
 name=lazdebuggerintf
@@ -10,7 +10,7 @@ version=0.0.1
 
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
-unitdir=. ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET)
+unitdir=. ../../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET)
 options=-MObjFPC -Scghi -O1 -g -gl -l -vewnhibq $(DBG_OPTIONS)
 
 [target]
