Reduce LCL dependendencies. Split UnitResourceIntf (BuildIntf) from UnitResources. Move LclMemManager to LazUtils. Sort package files.

--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -701,6 +701,7 @@
         <ComponentName Value="MessagesView"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="etMessagesWnd"/>
       </Unit>
       <Unit>
         <Filename Value="frames/project_resources_options.pas"/>
