ide: lfmunitresource no checklfmdlg in nogui, updated lpl, less hints

--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -211,7 +211,7 @@ lazbuilder: $(COMPILER_UNITTARGETDIR)
         $(MAKE) --assume-new=lazbuild.lpr lazbuild$(EXEEXT) OPT='$(DEFAULT_IDE_OPTIONS) $(LAZBUILD_OPT) $(OPT)'
 
 #-----------------------------------------------------------------------------
-all: ide starter lazbuilder
+all: lazbuilder ide starter
 
 #-----------------------------------------------------------------------------
 cleanide:
